LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/GM_SME__x.object-meta.xml
<CustomObject>
    <description>GM_SME</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_SME</externalName>
    <label>GM_SME</label>
    <pluralLabel>GM_SME</pluralLabel>
</CustomObject>