LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/CR_DATE__c.field-meta.xml
<CustomField>
    <fullName>CR_DATE__c</fullName>
    <description>CR_DATE</description>
    <externalDeveloperName>CR_DATE</externalDeveloperName>
    <label>CR_DATE</label>
    <type>DateTime</type>
</CustomField>