LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/CR_USER__c.field-meta.xml
<CustomField>
    <fullName>CR_USER__c</fullName>
    <description>CR_USER</description>
    <externalDeveloperName>CR_USER</externalDeveloperName>
    <label>CR_USER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>