LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/SME_DESC__c.field-meta.xml
<CustomField>
    <fullName>SME_DESC__c</fullName>
    <description>SME_DESC</description>
    <externalDeveloperName>SME_DESC</externalDeveloperName>
    <label>SME_DESC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>