LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/SME_GROUP__c.field-meta.xml
<CustomField>
    <fullName>SME_GROUP__c</fullName>
    <description>SME_GROUP</description>
    <externalDeveloperName>SME_GROUP</externalDeveloperName>
    <label>SME_GROUP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>