LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/SME_ID__c.field-meta.xml
<CustomField>
    <fullName>SME_ID__c</fullName>
    <description>SME_ID</description>
    <externalDeveloperName>SME_ID</externalDeveloperName>
    <label>SME_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>