LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/SME_LEADER__c.field-meta.xml
<CustomField>
    <fullName>SME_LEADER__c</fullName>
    <description>SME_LEADER</description>
    <externalDeveloperName>SME_LEADER</externalDeveloperName>
    <label>SME_LEADER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>