LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/SME_MID__c.field-meta.xml
<CustomField>
    <fullName>SME_MID__c</fullName>
    <description>SME_MID</description>
    <externalDeveloperName>SME_MID</externalDeveloperName>
    <label>SME_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>