LinKreta_POC_Repository/force-app/main/default/objects/GM_SME__x/fields/UP_USER__c.field-meta.xml
<CustomField>
    <fullName>UP_USER__c</fullName>
    <description>UP_USER</description>
    <externalDeveloperName>UP_USER</externalDeveloperName>
    <label>UP_USER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>